# fcat-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs
tests/: tests.rs
