[package]
name = "fcat"
version = "0.1.0"
edition = "2024"
authors = ["Jiseok CHOI <jiseok.dev@gmail.com>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
async-recursion = "1"
rlimit = "0.10"
eyre = "0.6"
color-eyre = "0.6"
arboard = "3.6"
globset = "0.4.16"
once_cell = "1.21.3"
